--- a/scss/main.css
+++ b/scss/main.css
@@ -209,7 +209,7 @@ main {
   color: var(--clr-primary-700);
   background: var(--clr-neutral-200);
   font-weight: 800;
-  padding: 0.5rem;
+  padding: 0.75rem 2rem;
   border-radius: var(--br);
   max-width: 25rem;
   margin-left: auto;
@@ -227,6 +227,14 @@ main {
      "space" will space the image,
   */
   background-repeat: space;
+}
+@media (min-width: 50em) {
+  .ratings li {
+    display: flex;
+  }
+  .ratings li::before {
+    margin: 0 1.5rem 0 0;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
